fix footer small devices

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
     <footer class="footer container-fluid">
       <div class="row d-flex justify-content-between align-items-center">
-        <div class="col-5 d-flex justify-content-center">
+        <div class="col-6 d-flex justify-content-center">
           <ul class="footer-nav d-flex">
             <li class="github-link">
               <a
@@ -390,8 +390,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-5 d-flex justify-content-center">
-          <ul class="footer-nav">
+        <div class="col-6 d-flex justify-content-center">
+          <ul class="footer-nav d-flex">
             <li class="site-by">Site by JAMES W. R.</li>
           </ul>
         </div>
