--- a/index.html
+++ b/index.html
@@ -216,44 +216,51 @@
 
       <!-- ************************************************************************************************   PROJECTS -->
 
-      <div id="projects" class="container-fluid">
+      <div id="projects" class="container-xxl">
         <div class="row d-flex justify-content-center align-items-center">
+          <!--  -->
           <!-- Bytesized Book Reviews -->
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="card flip-card-front">
-                <div class="card-body bytesized-reviews-front"></div>
-              </div>
 
-              <div class="card flip-card-back">
-                <div
-                  class="row d-flex justify-content-center align-items-center m-0 card-body bytesized-reviews-back"
-                >
-                  <p class="col-10 mb-2 proj-p">
-                    <strong class="mb-2"
-                      >Bytesized Book Reviews <br />
-                      (Please allow website time to load.)</strong
-                    >
-                    A full-stack, dynamic and responsive web application that
-                    allows registered users to publish their own book reviews.
-                    Created principally using Node, Express, Bootstrap, and
-                    MongoDB. See markdown on GitHub for full details on
-                    features.
-                  </p>
+          <div
+            id="flip-card-bytesized"
+            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body bytesized-reviews-front"></div>
+                </div>
 
-                  <div class="row justify-content-center mb-5 links">
-                    <a
-                      class="col-4 btn link-visit rounded-5"
-                      href="https://bytesized-book-reviews.onrender.com/"
-                      target="_blank"
-                      >Visit Website</a
-                    >
-                    <a
-                      class="col-4 btn link-code rounded-5"
-                      href="https://github.com/jazzorpheus/bytesized-reviews"
-                      target="_blank"
-                      >Source Code</a
-                    >
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center m-0 card-body bytesized-reviews-back"
+                  >
+                    <p class="col-10 mb-2 proj-p">
+                      <strong class="mb-2"
+                        >Bytesized Book Reviews <br />
+                        (Please allow website time to load)</strong
+                      >
+                      A full-stack, dynamic and responsive web application that
+                      allows registered users to publish their own book reviews.
+                      Created principally using Node, Express, Bootstrap, and
+                      MongoDB. See markdown on GitHub for full details on
+                      features.
+                    </p>
+
+                    <div class="row justify-content-center mb-5 links">
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://bytesized-book-reviews.onrender.com/"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -261,37 +268,45 @@
           </div>
 
           <!-- Photography Website -->
-          <div id="flip-card-photography" class="flip-card">
-            <div class="flip-card-inner">
-              <div class="card flip-card-front">
-                <div class="card-body photography-front"></div>
-              </div>
 
-              <div class="card flip-card-back">
-                <div
-                  class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
-                >
-                  <p class="col-10 mb-2 proj-p">
-                    <strong class="mb-2">Photography Website</strong>
-                    A static personal photography page made almost entirely with
-                    HTML, CSS, and Bootstrap 5 with the intention of
-                    demonstrating the potential of Bootstrap's grid system for
-                    creating highly responsive websites.
-                  </p>
+          <div
+            id="flip-card-photography"
+            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body photography-front"></div>
+                </div>
 
-                  <div class="row justify-content-center mt-2 mb-5 links">
-                    <a
-                      class="col-4 btn link-visit rounded-5"
-                      href="https://jazzorpheus.github.io/photography/home.html"
-                      target="_blank"
-                      >Visit Website</a
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
+                  >
+                    <p class="col-10 mb-3 proj-p">
+                      <strong class="mb-4">Photography Website</strong>
+                      A static personal photography page made almost entirely
+                      with HTML, CSS, and Bootstrap to demonstrate the potential
+                      of Bootstrap's grid system in creating highly responsive
+                      websites.
+                    </p>
+
+                    <div
+                      class="row justify-content-center align-items-end mt-2 mb-5 links"
                     >
-                    <a
-                      class="col-4 btn link-code rounded-5"
-                      href="https://github.com/jazzorpheus/photography"
-                      target="_blank"
-                      >Source Code</a
-                    >
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://jazzorpheus.github.io/photography/home.html"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/photography"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -299,36 +314,42 @@
           </div>
 
           <!-- To-Do List -->
-          <div id="flip-card-todolist" class="flip-card">
-            <div class="flip-card-inner">
-              <div class="card flip-card-front">
-                <div class="card-body to-do-list-front"></div>
-              </div>
 
-              <div class="card flip-card-back">
-                <div
-                  class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
-                >
-                  <p class="col-10 mb-2 proj-p">
-                    <strong class="mb-2">React To-Do List</strong>
-                    A basic to-do list web app made with React that allows the
-                    user to create, check off, and delete to-do's. Features a
-                    date-time stamp recording when each to-do was created.
-                  </p>
+          <div
+            id="flip-card-todolist"
+            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body to-do-list-front"></div>
+                </div>
 
-                  <div class="row justify-content-center mt-2 mb-5 links">
-                    <a
-                      class="col-4 btn link-visit rounded-5"
-                      href="https://jazzorpheus.github.io/to-do-list/"
-                      target="_blank"
-                      >Visit Website</a
-                    >
-                    <a
-                      class="col-4 btn link-code rounded-5"
-                      href="https://github.com/jazzorpheus/to-do-list"
-                      target="_blank"
-                      >Source Code</a
-                    >
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
+                  >
+                    <p class="col-10 mb-3 proj-p">
+                      <strong class="mb-4">React To-Do List</strong>
+                      A basic to-do list web application made with React that
+                      allows the user to create, check off, and delete to-do
+                      list items. Each to-do item features a datetime stamp.
+                    </p>
+
+                    <div class="row justify-content-center mt-2 mb-5 links">
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://jazzorpheus.github.io/to-do-list/"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/to-do-list"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -336,42 +357,53 @@
           </div>
 
           <!-- Bytesized Book Reviews 2 -->
-          <div id="flip-card-bytesized" class="flip-card">
-            <div class="flip-card-inner">
-              <div class="card flip-card-front">
-                <div class="card-body bytesized-reviews-front"></div>
-              </div>
 
-              <div class="card flip-card-back">
-                <div
-                  class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
-                >
-                  <p class="col-10 mb-2 proj-p">
-                    <strong class="mb-2">Bytesized Book Reviews</strong>
-                    A full-stack, dynamic and responsive web application that
-                    allows users to publish their own book reviews. Created
-                    principally using Node, Express, and MongoDB. (Please allow
-                    website time to load.)
-                  </p>
+          <div
+            id="flip-card-bytesized2"
+            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body bytesized-reviews-front"></div>
+                </div>
 
-                  <div class="row justify-content-center mt-2 mb-5 links">
-                    <a
-                      class="col-4 btn link-visit rounded-5"
-                      href="https://bytesized-book-reviews.onrender.com/"
-                      target="_blank"
-                      >Visit Website</a
-                    >
-                    <a
-                      class="col-4 btn link-code rounded-5"
-                      href="https://github.com/jazzorpheus/bytesized-reviews"
-                      target="_blank"
-                      >Source Code</a
-                    >
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center m-0 card-body bytesized-reviews-back"
+                  >
+                    <p class="col-10 mb-2 proj-p">
+                      <strong class="mb-2"
+                        >Bytesized Book Reviews <br />
+                        (Please allow website time to load)</strong
+                      >
+                      A full-stack, dynamic and responsive web application that
+                      allows registered users to publish their own book reviews.
+                      Created principally using Node, Express, Bootstrap, and
+                      MongoDB. See markdown on GitHub for full details on
+                      features.
+                    </p>
+
+                    <div class="row justify-content-center mb-5 links">
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://bytesized-book-reviews.onrender.com/"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <!-- END ROW 1 -->
         </div>
       </div>
     </main>
