--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
       <!-- ************************************************************************************************   PROJECTS -->
 
       <div id="projects" class="container-xxl">
+        <!-- FIRST ROW -->
+
         <div class="row d-flex justify-content-center align-items-center">
           <!--  -->
           <!-- Bytesized Book Reviews -->
@@ -403,8 +405,53 @@
               </div>
             </div>
           </div>
-          <!-- END ROW 1 -->
         </div>
+        <!-- END ROW 1 -->
+
+        <!-- PHONE DISPLAYS -->
+
+        <div class="container-fluid projects-small-device">
+          <div class="row d-flex justify-content-evenly align-items-center">
+            <div
+              class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
+            >
+              <img src="images/photography-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+            >
+              <h2
+                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
+              >
+                Photography Webpage
+              </h2>
+              <p class="col-12 d-flex m-0 p-0 text-center">
+                A static personal photography page made almost entirely with
+                HTML, CSS, and Bootstrap to demonstrate the potential of
+                Bootstrap's grid system in creating highly responsive websites.
+              </p>
+              <div
+                class="row justify-content-center align-items-end mt-2 mb-5 links"
+              >
+                <a
+                  class="col-4 btn link-visit rounded-5"
+                  href="https://jazzorpheus.github.io/photography/home.html"
+                  target="_blank"
+                  >Visit Website</a
+                >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://github.com/jazzorpheus/photography"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- END PHONE DISPLAYS -->
       </div>
     </main>
 
