--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
 
       <!-- ************************************************************************************************   PROJECTS -->
 
+      <h2 class="projects-title text-center display-4">Project Portfolio</h2>
+
       <div id="projects" class="container-xxl">
         <!-- FIRST ROW -->
 
@@ -481,7 +483,7 @@
       $(".link-projects").on("click", function () {
         $("html, body").animate(
           {
-            scrollTop: $("#projects").offset().top,
+            scrollTop: $(".projects-title").offset().top,
           },
           50
         );
