add more small device projects

--- a/index.html
+++ b/index.html
@@ -289,10 +289,9 @@
                   >
                     <p class="col-10 mb-3 proj-p">
                       <strong class="mb-4">Photography Website</strong>
-                      A static personal photography page made almost entirely
-                      with HTML, CSS, and Bootstrap to demonstrate the potential
-                      of Bootstrap's grid system in creating highly responsive
-                      websites.
+                      A static personal photography website made with HTML, CSS,
+                      and Bootstrap to demonstrate the potential of Bootstrap's
+                      grid system in creating highly responsive pages.
                     </p>
 
                     <div
@@ -316,7 +315,11 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- END ROW 2 -->
 
+        <div class="row d-flex justify-content-center align-items-center">
+          <!--  -->
           <!-- To-Do List -->
 
           <div
@@ -408,11 +411,14 @@
             </div>
           </div>
         </div>
-        <!-- END ROW 1 -->
+        <!-- END ROW 2 -->
 
         <!-- PHONE DISPLAYS -->
 
-        <div class="container-fluid projects-small-device">
+        <div class="container-fluid projects-small-device mb-5">
+          <!--  -->
+          <!-- Bytesized Book Reviews (TO BE) -->
+
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
               class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
@@ -426,12 +432,110 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                Photography Webpage
+                Photography Website
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
-                A static personal photography page made almost entirely with
-                HTML, CSS, and Bootstrap to demonstrate the potential of
-                Bootstrap's grid system in creating highly responsive websites.
+                A static personal photography website made with HTML, CSS, and
+                Bootstrap to demonstrate the potential of Bootstrap's grid
+                system in creating highly responsive pages.
+              </p>
+              <div
+                class="row justify-content-center align-items-end mt-2 mb-5 links"
+              >
+                <a
+                  class="col-4 btn link-visit rounded-5"
+                  href="https://jazzorpheus.github.io/photography/home.html"
+                  target="_blank"
+                  >Visit Website</a
+                >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://github.com/jazzorpheus/photography"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacers d-xl-none m-5">
+          <hr />
+          <hr />
+          <hr />
+        </div>
+
+        <!-- Photography Website -->
+        <div class="container-fluid projects-small-device mt-5">
+          <div class="row d-flex justify-content-evenly align-items-center">
+            <div
+              class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone"
+            >
+              <img src="images/photography-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+            >
+              <h2
+                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
+              >
+                Photography Website
+              </h2>
+              <p class="col-12 d-flex m-0 p-0 text-center">
+                A static personal photography website made with HTML, CSS, and
+                Bootstrap to demonstrate the potential of Bootstrap's grid
+                system in creating highly responsive pages.
+              </p>
+              <div
+                class="row justify-content-center align-items-end mt-2 mb-5 links"
+              >
+                <a
+                  class="col-4 btn link-visit rounded-5"
+                  href="https://jazzorpheus.github.io/photography/home.html"
+                  target="_blank"
+                  >Visit Website</a
+                >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://github.com/jazzorpheus/photography"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacers d-xl-none m-5">
+          <hr />
+          <hr />
+          <hr />
+        </div>
+
+        <div class="container-fluid projects-small-device mb-5">
+          <!--  -->
+          <!-- To-Do List (TO BE) -->
+
+          <div class="row d-flex justify-content-evenly align-items-center">
+            <div
+              class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
+            >
+              <img src="images/photography-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+            >
+              <h2
+                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
+              >
+                Photography Website
+              </h2>
+              <p class="col-12 d-flex m-0 p-0 text-center">
+                A static personal photography website made with HTML, CSS, and
+                Bootstrap to demonstrate the potential of Bootstrap's grid
+                system in creating highly responsive pages.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
