begin adding Finance and Speller

--- a/index.html
+++ b/index.html
@@ -218,156 +218,18 @@
 
       <h2 class="projects-title text-center display-4">Project Portfolio</h2>
 
-      <div id="projects" class="container-xxl">
-        <!-- FIRST ROW -->
-
+      <div id="projects" class="container-fluid">
+        <!--  -->
+        <!--  -->
+        <!-- ROW 1 -->
+        <!--  -->
         <div class="row d-flex justify-content-center align-items-center">
           <!--  -->
           <!-- Bytesized Book Reviews -->
-
+          <!--  -->
           <div
             id="flip-card-bytesized"
-            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="card flip-card-front">
-                  <div class="card-body bytesized-reviews-front"></div>
-                </div>
-
-                <div class="card flip-card-back">
-                  <div
-                    class="row d-flex justify-content-center align-items-center m-0 card-body bytesized-reviews-back"
-                  >
-                    <p class="col-10 mb-2 proj-p">
-                      <strong class="mb-2"
-                        >Bytesized Book Reviews <br />
-                        (Please allow website time to load)</strong
-                      >
-                      A full-stack, dynamic and responsive web application that
-                      allows registered users to publish their own book reviews.
-                      Created principally using Node, Express, Bootstrap, and
-                      MongoDB. See markdown on GitHub for full details on
-                      features.
-                    </p>
-
-                    <div class="row justify-content-center mb-5 links">
-                      <a
-                        class="col-4 btn link-visit rounded-5"
-                        href="https://bytesized-book-reviews.onrender.com/"
-                        target="_blank"
-                        >Visit Website</a
-                      >
-                      <a
-                        class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/bytesized-reviews"
-                        target="_blank"
-                        >Source Code</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Photography Website -->
-
-          <div
-            id="flip-card-photography"
-            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="card flip-card-front">
-                  <div class="card-body photography-front"></div>
-                </div>
-
-                <div class="card flip-card-back">
-                  <div
-                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
-                  >
-                    <p class="col-10 mb-3 proj-p">
-                      <strong class="mb-4">Photography Website</strong>
-                      A static personal photography website made with HTML, CSS,
-                      and Bootstrap to demonstrate the potential of Bootstrap's
-                      grid system in creating highly responsive pages.
-                    </p>
-
-                    <div
-                      class="row justify-content-center align-items-end mt-2 mb-5 links"
-                    >
-                      <a
-                        class="col-4 btn link-visit rounded-5"
-                        href="https://jazzorpheus.github.io/photography/home.html"
-                        target="_blank"
-                        >Visit Website</a
-                      >
-                      <a
-                        class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/photography"
-                        target="_blank"
-                        >Source Code</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END ROW 2 -->
-
-        <div class="row d-flex justify-content-center align-items-center">
-          <!--  -->
-          <!-- To-Do List -->
-
-          <div
-            id="flip-card-todolist"
-            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
-          >
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="card flip-card-front">
-                  <div class="card-body to-do-list-front"></div>
-                </div>
-
-                <div class="card flip-card-back">
-                  <div
-                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
-                  >
-                    <p class="col-10 mb-3 proj-p">
-                      <strong class="mb-4">React To-Do List</strong>
-                      A basic to-do list web application made with React that
-                      allows the user to create, check off, and delete to-do
-                      list items. Each to-do item features a datetime stamp.
-                    </p>
-
-                    <div class="row justify-content-center mt-2 mb-5 links">
-                      <a
-                        class="col-4 btn link-visit rounded-5"
-                        href="https://jazzorpheus.github.io/to-do-list/"
-                        target="_blank"
-                        >Visit Website</a
-                      >
-                      <a
-                        class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/to-do-list"
-                        target="_blank"
-                        >Source Code</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Bytesized Book Reviews 2 -->
-
-          <div
-            id="flip-card-bytesized2"
-            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+            class="col-xxl-4 col-xl-8 col-12 d-flex justify-content-center align-items-center p-0"
           >
             <div class="flip-card">
               <div class="flip-card-inner">
@@ -410,6 +272,176 @@
               </div>
             </div>
           </div>
+          <!--  -->
+          <!-- To-Do List -->
+          <!--  -->
+          <div
+            id="flip-card-todolist"
+            class="col-xxl-4 col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body to-do-list-front"></div>
+                </div>
+
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
+                  >
+                    <p class="col-10 mb-3 proj-p">
+                      <strong class="mb-4">React To-Do List</strong>
+                      A basic to-do list web application made using the React
+                      framework that allows the user to create, check off, and
+                      delete to-do list items. Each to-do item features a
+                      datetime stamp.
+                    </p>
+
+                    <div class="row justify-content-center mt-2 mb-5 links">
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://jazzorpheus.github.io/to-do-list/"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/to-do-list"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <!-- Photography Website -->
+          <!--  -->
+          <div
+            id="flip-card-photography"
+            class="col-xxl-4 col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body photography-front"></div>
+                </div>
+
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center pt-5 m-0 card-body"
+                  >
+                    <p class="col-10 mb-3 proj-p">
+                      <strong class="mb-4">Photography Website</strong>
+                      A static personal photography website made with HTML, CSS,
+                      and Bootstrap to demonstrate the potential of Bootstrap's
+                      grid system in creating highly responsive pages.
+                    </p>
+
+                    <div
+                      class="row justify-content-center align-items-end mt-2 mb-5 links"
+                    >
+                      <a
+                        class="col-4 btn link-visit rounded-5"
+                        href="https://jazzorpheus.github.io/photography/home.html"
+                        target="_blank"
+                        >Visit Website</a
+                      >
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/photography"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- END ROW 1 -->
+
+        <!-- START ROW 2 -->
+        <div class="row d-flex justify-content-center align-items-center">
+          <!--  -->
+          <!-- CS50 Finance -->
+          <!--  -->
+          <div
+            id="flip-card-finance"
+            class="col-xl-6 col-12 d-flex justify-content-xxl-end justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body cs50-finance-front"></div>
+                </div>
+
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center m-0 card-body cs50-finance-back"
+                  >
+                    <p class="col-10 mb-2 proj-p">
+                      <strong class="mb-2">CS50 Finance</strong>
+                      A website created with the Flask framework together with a
+                      SQL database that allows users to 'purchase' and 'sell'
+                      stocks based on real-time data pulled from the IEX
+                      Exchange via the IEX Cloud API. This project was part of
+                      an assignment for CS50's Introduction to Computer Science
+                      so some of the code was written by instructors at Harvard.
+                      See markdown on GitHub for more details.
+                    </p>
+
+                    <div class="row justify-content-center mb-5 links">
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <!-- CS50 Speller -->
+          <!--  -->
+          <div
+            id="flip-card-speller"
+            class="col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
+          >
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="card flip-card-front">
+                  <div class="card-body cs50-speller-front"></div>
+                </div>
+
+                <div class="card flip-card-back">
+                  <div
+                    class="row d-flex justify-content-center align-items-center m-0 card-body cs50-speller-back"
+                  >
+                    <p class="col-10 mb-2 proj-p">
+                      <strong class="mb-2">CS50 Speller</strong>
+                      Allows users to spellcheck a file of text.
+                    </p>
+
+                    <div class="row justify-content-center mb-5 links">
+                      <a
+                        class="col-4 btn link-code rounded-5"
+                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        target="_blank"
+                        >Source Code</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- END ROW 2 -->
 
@@ -418,7 +450,7 @@
         <div class="container-fluid projects-small-device mb-5">
           <!--  -->
           <!-- Bytesized Book Reviews -->
-
+          <!--  -->
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
               class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
@@ -466,14 +498,15 @@
           <hr />
           <hr />
         </div>
-
-        <!-- Photography Website -->
+        <!--  -->
+        <!-- To-Do List -->
+        <!--  -->
         <div class="container-fluid projects-small-device mt-5">
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
               class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone"
             >
-              <img src="images/photography-mobile.png" alt="" />
+              <img src="images/to-do-list-mobile.png" alt="" />
             </div>
 
             <div
@@ -482,25 +515,25 @@
               <h2
                 class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
               >
-                Photography Website
+                To-Do List App
               </h2>
               <p class="col-12 d-flex m-0 p-0 text-center">
-                A static personal photography website made with HTML, CSS, and
-                Bootstrap to demonstrate the potential of Bootstrap's grid
-                system in creating highly responsive pages.
+                A basic to-do list web application made using the React
+                framework that allows the user to create, check off, and delete
+                to-do list items. Each to-do item features a datetime stamp.
               </p>
               <div
                 class="row justify-content-center align-items-end mt-2 mb-5 links"
               >
                 <a
                   class="col-4 btn link-visit rounded-5"
-                  href="https://jazzorpheus.github.io/photography/home.html"
+                  href="https://jazzorpheus.github.io/to-do-list/"
                   target="_blank"
                   >Visit Website</a
                 >
                 <a
                   class="col-4 btn link-code rounded-5"
-                  href="https://github.com/jazzorpheus/photography"
+                  href="https://github.com/jazzorpheus/to-do-list"
                   target="_blank"
                   >Source Code</a
                 >
@@ -517,8 +550,8 @@
 
         <div class="container-fluid projects-small-device mb-5">
           <!--  -->
-          <!-- To-Do List (TO BE) -->
-
+          <!-- Photography Website -->
+          <!--  -->
           <div class="row d-flex justify-content-evenly align-items-center">
             <div
               class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
