finish descriptions and source code for CS50 projects

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <!--  -->
           <div
             id="flip-card-bytesized"
-            class="col-xxl-4 col-xl-8 col-12 d-flex justify-content-center align-items-center p-0"
+            class="col-xxl-4 col-xl-6 col-12 d-flex justify-content-center align-items-center p-0"
           >
             <div class="flip-card">
               <div class="flip-card-inner">
@@ -384,7 +384,9 @@
                     class="row d-flex justify-content-center align-items-center m-0 card-body cs50-finance-back"
                   >
                     <p class="col-10 mb-2 proj-p">
-                      <strong class="mb-2">CS50 Finance</strong>
+                      <strong class="mb-2"
+                        >CS50 Finance (site coming soon)</strong
+                      >
                       A website created with the Flask framework together with a
                       SQL database that allows users to 'purchase' and 'sell'
                       stocks based on real-time data pulled from the IEX
@@ -397,7 +399,7 @@
                     <div class="row justify-content-center mb-5 links">
                       <a
                         class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        href="https://github.com/jazzorpheus/finance"
                         target="_blank"
                         >Source Code</a
                       >
@@ -426,13 +428,19 @@
                   >
                     <p class="col-10 mb-2 proj-p">
                       <strong class="mb-2">CS50 Speller</strong>
-                      Allows users to spellcheck a file of text.
+                      A command-line application written in C that enables users
+                      to spellcheck .txt files. The output includes a list of
+                      misspelled words plus some stats on the time taken to
+                      execute various parts of the program. The primary purpose
+                      of the project was to investigate the pros and cons of
+                      different ways of loading the dictionary into memory using
+                      varying data structures and methods.
                     </p>
 
                     <div class="row justify-content-center mb-5 links">
                       <a
                         class="col-4 btn link-code rounded-5"
-                        href="https://github.com/jazzorpheus/bytesized-reviews"
+                        href="https://github.com/jazzorpheus/speller"
                         target="_blank"
                         >Source Code</a
                       >
@@ -584,6 +592,102 @@
                 <a
                   class="col-4 btn link-code rounded-5"
                   href="https://github.com/jazzorpheus/photography"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacers d-xl-none m-5">
+          <hr />
+          <hr />
+          <hr />
+        </div>
+
+        <div class="container-fluid projects-small-device mb-5">
+          <!--  -->
+          <!-- CS50 Finance -->
+          <!--  -->
+          <div class="row d-flex justify-content-evenly align-items-center">
+            <div
+              class="col-10 col-md-4 order-md-2 d-flex justify-content-center p-0 phone"
+            >
+              <img src="images/CS50Finance-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+            >
+              <h2
+                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
+              >
+                CS50 Finance (site coming soon)
+              </h2>
+              <p class="col-12 d-flex m-0 p-0 text-center">
+                A web app created with the Flask framework together with a SQL
+                database that allows users to 'purchase' and 'sell' stocks based
+                on real-time data pulled from the IEX Exchange via the IEX Cloud
+                API. This project was part of an assignment for CS50's
+                Introduction to Computer Science so some of the code was written
+                by instructors at Harvard. See markdown on GitHub for more
+                details.
+              </p>
+              <div
+                class="row justify-content-center align-items-end mt-2 mb-5 links"
+              >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://github.com/jazzorpheus/finance"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacers d-xl-none m-5">
+          <hr />
+          <hr />
+          <hr />
+        </div>
+
+        <div class="container-fluid projects-small-device mb-5">
+          <!--  -->
+          <!-- CS50 Speller -->
+          <!--  -->
+          <div class="row d-flex justify-content-evenly align-items-center">
+            <div
+              class="col-10 col-md-4 d-flex justify-content-center p-0 phone"
+            >
+              <img src="images/CS50Speller-mobile.png" alt="" />
+            </div>
+
+            <div
+              class="row col-10 col-md-4 d-flex flex-wrap justify-content-center align-items-center p-0 project-description"
+            >
+              <h2
+                class="col-12 d-flex justify-content-center mb-4 p-0 text-center"
+              >
+                CS50 Speller
+              </h2>
+              <p class="col-12 d-flex m-0 p-0 text-center">
+                A command-line application written in C that enables users to
+                spellcheck .txt files. The output includes a list of misspelled
+                words plus some stats on the time taken to execute various parts
+                of the program. The primary purpose of the project was to
+                investigate the pros and cons of different ways of loading the
+                dictionary into memory using varying data structures and
+                programming methods.
+              </p>
+              <div
+                class="row justify-content-center align-items-end mt-2 mb-5 links"
+              >
+                <a
+                  class="col-4 btn link-code rounded-5"
+                  href="https://github.com/jazzorpheus/speller"
                   target="_blank"
                   >Source Code</a
                 >
