make small screen descriptions match big screen

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                       <strong class="mb-2"
                         >CS50 Finance (site coming soon)</strong
                       >
-                      A website created with the Flask framework together with a
+                      A web app created with the Flask framework together with a
                       SQL database that allows users to 'purchase' and 'sell'
                       stocks based on real-time data pulled from the IEX
                       Exchange via the IEX Cloud API. This project was part of
